--- a/client/src/css/App.css
+++ b/client/src/css/App.css
@@ -3,3 +3,10 @@
   height: 100%;
   overflow: hidden;
 }
+
+@media (max-width: 700px) {
+  .App {
+    overflow: scroll;
+    background-color: #21314d;
+  }
+}
