--- a/client/src/css/home.css
+++ b/client/src/css/home.css
@@ -84,6 +84,11 @@
   box-sizing: border-box;
   background-color: white;
 }
+
+.inptdate {
+  margin-bottom: 4px;
+  height: 40px;
+}
 .inpt:focus,
 .passenger-summary:focus {
   padding: 0.571rem;
@@ -153,6 +158,8 @@
   flex-direction: column;
   align-items: center;
   cursor: pointer;
+  height: 40%;
+  text-align: center;
 }
 
 .out_return {
@@ -338,15 +345,15 @@
   width: 100%;
 }
 .in_season_div {
-  position: relative;
-  background-color: #ffffff;
-  border: solid 1px #b2b2b2;
-  border-radius: 0.214rem;
-  color: #192325;
-  margin-top: 3.57143rem;
-  display: flex;
-  align-items: center;
-  padding-right: 4px;
+  position: relative !important;
+  background-color: #ffffff !important;
+  border: solid 1px #b2b2b2 !important;
+  border-radius: 0.214rem !important;
+  color: #192325 !important;
+  margin-top: 3.57143rem !important;
+  display: flex !important;
+  align-items: center !important;
+  padding-right: 4px !important;
 }
 
 .in_season_div span {
@@ -361,4 +368,72 @@
   padding: 2.14286rem 2.286rem 0.571rem 0.85714rem;
   border: none;
   font-weight: bold;
+}
+
+.css-plngxy-MuiInputBase-root-MuiOutlinedInput-root {
+  height: 40px;
+}
+
+.css-1rv3ei8-MuiFormControl-root-MuiTextField-root {
+  margin-top: unset !important;
+  margin-bottom: 4px !important;
+}
+
+.MuiPickersDay-daySelected {
+  background-color: #01c3a7 !important;
+}
+
+@media (max-width: 1400px) {
+  .showcase-content {
+    width: 1100px;
+  }
+}
+
+@media (max-width: 1150px) {
+  .showcase-content {
+    width: 900px;
+  }
+}
+
+@media (max-width: 950px) {
+  .showcase-content {
+    justify-content: center;
+  }
+
+  .barre_recherche {
+    width: 50%;
+  }
+
+  .barre_text {
+    display: none;
+  }
+}
+
+@media (max-width: 815px) {
+  .showcase-content {
+    height: 100%;
+    width: 100%;
+  }
+  .submit {
+    margin-bottom: 1.143rem;
+  }
+  .barre_recherche {
+    width: 100%;
+    border-radius: unset;
+  }
+  .barre_text {
+    display: none;
+  }
+}
+
+@media (max-width: 515px) {
+  .radio {
+    width: 20%;
+  }
+  .radios {
+    justify-content: space-around;
+  }
+  .summary{
+    width: unset;
+  }
 }
